Added inline styles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-cellblock",
-  "version": "3.0.4",
+  "name": "react-cellblock-ssta",
+  "version": "3.0.5",
   "description": "A react-based grid for smarter responsive components",
   "repository": {
     "type": "git",
